--- a/index.html
+++ b/index.html
@@ -36,32 +36,33 @@
                                 <p> Forecast</p>
                             </div>
                             <div class="item-dia row">
-                                <div class="icon-item col-3 "><img width="50" height="50" src="https://img.icons8.com/plasticine/100/000000/stormy-night.png"/></div>
-                                <div class="dia-item col-6 ">
-                                    <h6>Viernes</h6>
-                                    <p>Nublado</p>
+                                <div class="icon-item col-3 "><img id="icon-item1" width="50" height="50" src="https://img.icons8.com/plasticine/100/000000/stormy-night.png"/></div>
+                                <div class="dia-item col-6 col-md-5 ">
+                                    <h6 id="txt-dia-item1">Viernes</h6>
+                                    <p id="txt-desc-item1">Nublado</p>
                                 </div>
-                                <div class="temp-item col-3 ">
-                                    <h6>32°/24°</h6>
+                                <div class="temp-item col-3 col-md-4 ">
+                                    <h6 id="txt-temp-item1">32°/24°</h6>
                                 </div>
                             </div>
                             <div class="item-dia row">
-                                <div class="icon-item col-3 "><img width="50" height="50" src="https://img.icons8.com/plasticine/100/000000/stormy-night.png"/></div>
-                                <div class="dia-item col-6 ">
-                                    <h6>Viernes</h6>
-                                    <p>Nublado</p>
+                                <div class="icon-item col-3 "><img  id="icon-item2"  width="50" height="50" src="https://img.icons8.com/plasticine/100/000000/stormy-night.png"/></div>
+                                <div class="dia-item col-6 col-md-5 ">
+                                    <h6 id="txt-dia-item2">Viernes</h6>
+                                    <p id="txt-desc-item2">Nublado</p>
                                 </div>
-                                <div class="temp-item col-3 ">
-                                    <h6>32°/24°</h6>
+                                <div class="temp-item col-3 col-md-4 ">
+                                    <h6 id="txt-temp-item2">32°/24°</h6>
                                 </div>
-                            </div><div class="item-dia row">
-                                <div class="icon-item col-3 "><img width="50" height="50" src="https://img.icons8.com/plasticine/100/000000/stormy-night.png"/></div>
-                                <div class="dia-item col-6 ">
-                                    <h6>Viernes</h6>
-                                    <p>Nublado</p>
+                            </div>
+                            <div class="item-dia row">
+                                <div class="icon-item col-3 "><img id="icon-item3"  width="50" height="50" src="https://img.icons8.com/plasticine/100/000000/stormy-night.png"/></div>
+                                <div class="dia-item col-6 col-md-5 ">
+                                    <h6 id="txt-dia-item3" >Viernes</h6>
+                                    <p id="txt-desc-item3">Nublado</p>
                                 </div>
-                                <div class="temp-item col-3 ">
-                                    <h6>32°/24°</h6>
+                                <div class="temp-item col-3 col-md-4 ">
+                                    <h6 id="txt-temp-item3">32°/24°</h6>
                                 </div>
                             </div>
 
@@ -102,6 +103,23 @@
 
                 </div>
                 <div class="col-md-3">
+                    <div class="container-fluid p-0 tarjeta-aliado">
+                        <div class="row">
+                            <div class="col-3 icon-aliado">
+                                <div class="icon-item col-3 "><img id="icon-item3"  width="50" height="50" src="https://img.icons8.com/plasticine/100/000000/stormy-night.png"/></div>
+                            </div>
+                            <div class="col-4 temp-aliado">
+                                <h2>29°</h2>
+                            </div>
+                            <div class="col-4"> <b>London</b> <p>uk</p></div>
+                            
+                        </div>
+                        <div class=" row">
+                            <div class="col-4"><p>Humidity:</p></div>
+                            <div class="col-4"><p>north</p></div>
+                            <div class="col-4"><p>53km/h</p></div>
+                        </div>
+                    </div>
                     
                 </div>
             </div>
