--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div class="container  ">
-        <div class="container tarjeta row position-relative">
+        <div class=" tarjeta row position-relative">
 <!--        iconos flotantes -->
             <div class="tiempo p-0 w-auto">
                 <div class="icon w-100">
